lib/komainu/tests/snapshots/flows__success-2.snap
---
source: lib/komainu/tests/flows.rs
expression: "SerdeResponse::from(deny)"
---
{
  "body": null,
  "headers": {
    "location": "http://client_1.example/?error=access_denied"
  },
  "status": 302
}
