lib/komainu/tests/snapshots/flows__success.snap
---
source: lib/komainu/tests/flows.rs
expression: "SerdeResponse::from(acceptor.into_response())"
---
{
  "body": null,
  "headers": {
    "location": "http://client_1.example/?code=YSkam0dTW2DsMrIE"
  },
  "status": 302
}
